--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
             <div class="section-header">
                 <h2 class="section-title text-center wow fadeInDown">Vaardigheden en competenties</h2>
-                <p class="text-center wow fadeInDown">Een kort overzicht van mijn verworven vaardigheden en compententies uit mijn opleidingen en levenervaringen. <br> Kijk zeker ook naar mijn compententiematrices.</p>
+                <p class="text-center wow fadeInDown">Een kort overzicht van mijn verworven vaardigheden en compententies uit mijn opleidingen en levenservaringen. <br> Kijk zeker ook naar mijn compententiematrices.</p>
             </div>
 
             <div class="row">
