--- a/index.html
+++ b/index.html
@@ -435,6 +435,11 @@
             <div class="section-header">
                 <h2 class="section-title text-center wow fadeInDown">Neem contact op</h2>
                 <p class="text-center wow fadeInDown"> </p>
+                <p class="text-center">
+                    <a class="btn special-btn btn-lg" href="http://rr2511.github.io/pdf/CV_Ruth_Nederlands">Check mijn Nederlandse CV</a>
+                    <a class="btn special-btn btn-lg" href="http://rr2511.github.io/pdf/CV_Ruth_Engels">Check mijn Engelse CV</a>
+                </p>
+                
             </div>
         </div>
     </section><!--/#get-in-touch-->
