--- a/index.html
+++ b/index.html
@@ -436,8 +436,8 @@
                 <h2 class="section-title text-center wow fadeInDown">Neem contact op</h2>
                 <p class="text-center wow fadeInDown"> </p>
                 <p class="text-center">
-                    <a class="btn special-btn btn-lg" href="http://rr2511.github.io/pdf/CV_Ruth_Nederlands">Check mijn Nederlandse CV</a>
-                    <a class="btn special-btn btn-lg" href="http://rr2511.github.io/pdf/CV_Ruth_Engels">Check mijn Engelse CV</a>
+                    <a class="btn special-btn btn-lg" href="http://rr2511.github.io/pdf/CV_Ruth_Nederlands.pdf">Check mijn Nederlandse CV</a>
+                    <a class="btn special-btn btn-lg" href="http://rr2511.github.io/pdf/CV_Ruth_Engels.pdf">Check mijn Engelse CV</a>
                 </p>
                 
             </div>
