--- a/competentiematrix.html
+++ b/competentiematrix.html
@@ -41,7 +41,7 @@
 
     <div class="section-header">
         <h2 class="section-title text-center wow fadeInDown">Competentiematrix</h2>
-        <p class="text-center wow fadeInDown">De competentiematrix omvat mijn sterktes, zwaktes, opportuniteiten en bedreigingen binnen de competenties van het domeinspecifieke leerresultatenkader voor toegepaste informatici. </p>
+        <p class="text-center wow fadeInDown">De competentiematrix omvat mijn sterktes, zwaktes en opportuniteiten binnen de competenties van het domeinspecifieke leerresultatenkader voor toegepaste informatici. </p>
     </div>
 
     <section id="analyseren">
@@ -65,7 +65,6 @@
                             <th>Sterktes</th>
                             <th>Zwaktes</th>
                             <th>Opportuniteiten</th>
-                            <th>Bedreigingen</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -86,7 +85,6 @@
                                     <li>Mogelijkheid om in de toekomst nog bij te leren door middel van curriculum tijdens opleiding.</li>
                                 </ul>
                             </td>
-                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -118,7 +116,6 @@
                             <th>Sterktes</th>
                             <th>Zwaktes</th>
                             <th>Opportuniteiten</th>
-                            <th>Bedreigingen</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -139,7 +136,6 @@
                                     <li>Mogelijkheid om in de toekomst nog veel in te oefenen omwille van curriculum tijdens opleiding.</li>
                                 </ul>
                             </td>
-                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -171,7 +167,6 @@
                             <th>Sterktes</th>
                             <th>Zwaktes</th>
                             <th>Opportuniteiten</th>
-                            <th>Bedreigingen</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -194,7 +189,6 @@
                                     <li>Mogelijkheid om in de toekomst nog in te oefenen omwille van curriculum tijdens opleiding.</li>
                                 </ul>
                             </td>
-                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -225,7 +219,6 @@
                         <tr>
                             <th>Sterktes</th>
                             <th>Opportuniteiten</th>
-                            <th>Bedreigingen</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -240,7 +233,6 @@
                                     <li>Mogelijkheid om in de toekomst nog in te oefenen omwille van curriculum tijdens opleiding.</li>
                                 </ul>
                             </td>
-                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -271,7 +263,6 @@
                         <tr>
                             <th>Sterktes</th>
                             <th>Opportuniteiten</th>
-                            <th>Bedreigingen</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -282,8 +273,7 @@
                                     <li>Zicht op wat maatschappelijk correct is.</li>
                                 </ul>
                             </td>
-                            <td></td>
-                            <td></td>
+                            <td>Toekomstig curriculum tijdens mijn opleiding bieden mogelijkheden om rond deontologie en best practices te werken.</td>
                         </tr>
                     </tbody>
                 </table>
@@ -314,7 +304,6 @@
                         <tr>
                             <th>Zwaktes</th>
                             <th>Opportuniteiten</th>
-                            <th>Bedreigingen</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -324,8 +313,7 @@
                                     <li>In het verleden niet altijd even kritisch nagedacht, vaak laten meeleiden door anderen die hun mening sterk verkondigen. Maar dit is laatste jaren ook sterk verbeterd.</li>
                                 </ul>
                             </td>
-                            <td></td>
-                            <td></td>
+                            <td>Toekomstig curriculum tijdens mijn opleiding bieden mogelijkheden om rond deontologie en best practices te werken.</td>
                         </tr>
                     </tbody>
                 </table>
@@ -354,18 +342,22 @@
                 <table class="table table-bordered">
                     <thead>
                         <tr>
+                            <th>Zwaktes</th>
                             <th>Opportuniteiten</th>
-                            <th>Bedreigingen</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>
                                 <ul>
+                                    <li>Nog weinig opties gehad om mensen buiten de opleiding te adviseren over bepaalde IT-oplossingen.</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
                                     <li>Mogelijkheid om in de toekomst nog uit te voeren omwille van curriculum tijdens opleiding (vb. tijdens stage of eindproject).</li>
                                 </ul>
                             </td>
-                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -397,7 +389,6 @@
                             <th>Sterktes</th>
                             <th>Zwaktes</th>
                             <th>Opportuniteiten</th>
-                            <th>Bedreigingen</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -418,7 +409,6 @@
                                     <li>Misschien tijdens de stage de mogelijkheid om te werken in een Agile team?</li>
                                 </ul>
                             </td>
-                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -449,7 +439,6 @@
                         <tr>
                             <th>Sterktes</th>
                             <th>Opportuniteiten</th>
-                            <th>Bedreigingen</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -462,10 +451,9 @@
                             <td>
                                 <ul>
                                     <li>Stage in het buitenland (Engels)</li>
-                                    <li>Projecten in het buitenland (Frans)</li>
+                                    <li>Projecten in het buitenland, zoals bijvoorbeeld Weekend Challenge in Parijs</li>
                                 </ul>
                             </td>
-                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -496,7 +484,6 @@
                         <tr>
                             <th>Sterktes</th>
                             <th>Opportuniteiten</th>
-                            <th>Bedreigingen</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -511,7 +498,6 @@
                                     <li>Aan het plannen voor een stage in het buitenland.</li>
                                 </ul>
                             </td>
-                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -542,7 +528,6 @@
                         <tr>
                             <th>Zwaktes</th>
                             <th>Opportuniteiten</th>
-                            <th>Bedreigingen</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -557,7 +542,6 @@
                                     <li>Op zoek gaan naar uitdagende projecten.</li>
                                 </ul>
                             </td>
-                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -588,7 +572,6 @@
                         <tr>
                             <th>Sterktes</th>
                             <th>Opportuniteiten</th>
-                            <th>Bedreigingen</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -604,7 +587,6 @@
                                     <li>Mogelijkheid om in de toekomst nog uit te voeren omwille van curriculum tijdens opleiding (vb. stage, eindproject).</li>
                                 </ul>
                             </td>
-                            <td></td>
                         </tr>
                     </tbody>
                 </table>
