--- a/index.html
+++ b/index.html
@@ -229,7 +229,6 @@
                     <li><a href="#" data-filter=".portfolio">Other</a></li>
                 </ul>
                 <!--/#portfolio-filter-->
-                <p>Zal nog verder worden aangevuld!</p>
             </div>
 
             <div class="portfolio-items">
@@ -238,18 +237,18 @@
                         <img class="img-responsive" src="images/portfolio/website-tantan.png" alt="websiteTantan">
                         <div class="portfolio-info">
                             <h3>Website Tantan</h3> Een eerste kennismaking met webontwikkeling. Een uitdaging op gebied van HTML5, CSS3, JavaScript, communicatie en samenwerking.
-                            <a class="preview" href="images/portfolio/website-tantan-groot.png" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                            <a class="preview" href="https://s0214211.webontwerp.khleuven.be/TanTan1812/HTML/index.html"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
                 <!--/.portfolio-item-->
 
-                <div class="portfolio-item corporate portfolio">
+                <div class="portfolio-item corporate">
                     <div class="portfolio-item-inner">
                         <img class="img-responsive" src="images/portfolio/masterThesis.jpg" alt="master thesis">
                         <div class="portfolio-info">
                             <h3>Masterthesis psychologie</h3> Het eindresultaat van nauwgezet onderzoekswerk en een geweldige samenwerking. Een mooie afsluiting van een belangrijk hoofdstuk.
-                            <a class="preview" href="images/portfolio/masterThesisGroot.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                            <a class="preview" href="pdf/Masterpaper.pdf"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
@@ -257,69 +256,39 @@
 
                 <div class="portfolio-item creative">
                     <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/03.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/web3_klein.png" alt="">
                         <div class="portfolio-info">
-                            <h3>Portfolio Item 3</h3> Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                            <h3>Dynamische webshop 3</h3> Dynamische webshop en user management system met authenticatie en autorisatie.
+                            <a class="preview" href="images/portfolio/Web3.PNG" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
                 <!--/.portfolio-item-->
 
-                <div class="portfolio-item corporate">
+                <!--/.portfolio-item-->
+
+                <div class="portfolio-item creative">
                     <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/04.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/ip.png" alt="">
                         <div class="portfolio-info">
-                            <h3>Portfolio Item 4</h3> Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                            <h3>Webapplicatie</h3> Voor het vak interprogrammeren, een webapplicatie met user management system.
+                            <a class="preview" href="http://193.191.187.14:10158/BoekenProject-Springmvc-1.0-SNAPSHOT/index.htm"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
                 <!--/.portfolio-item-->
 
-                <div class="portfolio-item creative portfolio">
+                <div class="portfolio-item portfolio">
                     <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/05.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/topconsult.png" alt="">
                         <div class="portfolio-info">
-                            <h3>Portfolio Item 5</h3> Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                            <h3>Website Top Consult 5</h3> Website die ik aan het medegewerkt voor het bedrijf Top Consult.
+                            <a class="preview" href="http://www.top-consult.be/"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
                 <!--/.portfolio-item-->
 
-                <div class="portfolio-item corporate">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/06.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Portfolio Item 5</h3> Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <!--/.portfolio-item-->
-
-                <div class="portfolio-item creative portfolio">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/07.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Portfolio Item 7</h3> Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <!--/.portfolio-item-->
-
-                <div class="portfolio-item corporate">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/08.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Portfolio Item 8</h3> Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <!--/.portfolio-item-->
             </div>
         </div>
         <!--/.container-->
