--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <div class="portfolio-item-inner">
                         <img class="img-responsive" src="images/portfolio/topconsult.png" alt="">
                         <div class="portfolio-info">
-                            <h3>Website Top Consult 5</h3> Website waar aan ik het meegewerkt voor het bedrijf Top Consult.
+                            <h3>Website Top Consult 5</h3> Website waaraan ik heb meegewerkt voor het bedrijf Top Consult.
                             <a class="preview" href="http://www.top-consult.be/"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
